--- a/client/src/Pages/Coin-Data/individual-coin.scss
+++ b/client/src/Pages/Coin-Data/individual-coin.scss
@@ -3,7 +3,11 @@
 .individual-page {
     height: 100%;
     min-height: 100vh;
-    background-color: $darker-grey;
+    background: linear-gradient(180deg, rgba(0,63,95,1) 0%, rgba(13,18,23,1) 35%);
+
+    h1{
+        color: $white;
+    }
 }
 
 .coin-description {
@@ -276,7 +280,7 @@
     }
 
     &::after{
-        content: "Market Cap = Current Price x Circulating Supply";
+        content: "Market Cap = Market Rate x Circulating Supply";
         position: absolute;
         bottom: 30px;
         left: 5px;
@@ -310,7 +314,7 @@
     }
 
     &::after{
-        content: "Market Cap = Current Price x Circulating Supply";
+        content: "Market Cap = Market Rate x Circulating Supply";
         position: absolute;
         bottom: 30px;
         left: 5px;
