Putting api call for trending data in Trending.jsx to backend due to 3rd party API cors issues

--- a/client/src/Pages/Login/login.scss
+++ b/client/src/Pages/Login/login.scss
@@ -3,7 +3,7 @@
 .login {
     color: $white;
     min-height: 80vh;
-    background-image: url("../../assets/backg.webp");
+    background-image: url("../../Assets/backg.webp");
     display: flex;
 }
 
