Updating Styles Path

--- a/client/src/Pages/Home-Page/crypto-prices/market-banner.scss
+++ b/client/src/Pages/Home-Page/crypto-prices/market-banner.scss
@@ -1,5 +1,5 @@
-@import "../../../styles/variables.scss";
-@import "../../../styles/mixins.scss";
+@import "../../../Styles/variables.scss";
+@import "../../../Styles/mixins.scss";
 
 .market-banner {
     background-color: $bg-mid;
