--- a/client/src/Pages/Trending/marquee/marquee.scss
+++ b/client/src/Pages/Trending/marquee/marquee.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/variables.scss";
+@import "../../../Styles/variables.scss";
 /*An infinite marquee I found online: https://ryanmulligan.dev/blog/css-marquee/*/
 
 .marquee {
