--- a/client/src/Pages/Home-Page/hero/first-banner.scss
+++ b/client/src/Pages/Home-Page/hero/first-banner.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/variables.scss";
+@import "../../../Styles/variables.scss";
 
 .first-banner {
   background: rgb(18, 26, 48);
