--- a/client/src/Pages/Portfolio/portfolio.scss
+++ b/client/src/Pages/Portfolio/portfolio.scss
@@ -1,4 +1,4 @@
-@import "../../styles/variables.scss";
+@import "../../Styles/variables.scss";
 
 .portfolio-container {
     box-sizing: border-box;
