--- a/client/src/Pages/Home-Page/Eth.scss
+++ b/client/src/Pages/Home-Page/Eth.scss
@@ -105,7 +105,7 @@ line {
         transform: translate(-50%, -50%);
         width: 100%;
         height: 50%;
-        background-color: rgba(255, 255, 255, 0.8); 
+        background-color: rgba(255, 255, 255, .65); 
         border-radius: 50%;
         box-shadow: 0 0 10px 10px rgba(255, 255, 255, 0.8); 
         animation: pulse 2s infinite alternate forwards; 
@@ -125,11 +125,11 @@ line {
 
 @keyframes pulse {
     0% {
-        box-shadow: 0 0 10px 10px rgba(255, 255, 255, 0.8), 0 0 10px 20px rgba(255, 255, 255, 0.4);
+        box-shadow: 0 0 10px 10px rgba(255, 255, 255, 0.45), 0 0 10px 20px rgba(255, 255, 255, 0.45);
     
     }
     100% {
-        box-shadow: 0 0 50px 20px rgba(255, 255, 255, 0.8), 0 0 20px 30px rgba(255, 255, 255, 0.4); 
+        box-shadow: 0 0 50px 20px rgba(255, 255, 255, 0.6), 0 0 20px 30px rgba(255, 255, 255, 0.345); 
     
     }
 }
