Adding minor UI changes

--- a/client/src/Pages/Trending/trending.scss
+++ b/client/src/Pages/Trending/trending.scss
@@ -97,6 +97,10 @@
     }
 }
 
+#trending-base { 
+    margin-bottom: 5rem;
+}
+
 @media (max-width: 730px) {
     .optional-display {
         display: none;
