--- a/client/src/Pages/Home-Page/crypto-prices/market-banner.scss
+++ b/client/src/Pages/Home-Page/crypto-prices/market-banner.scss
@@ -82,8 +82,8 @@
 
 .api-table {
     width: 100%;
-    height: 700px;
     position: relative;
+    overflow-y: hidden
 }
 
 .row {
@@ -116,7 +116,7 @@
 }
 
 .pag {
-    margin: 1.5rem auto 0 auto;
+    margin: .85rem auto 0 auto;
 
     nav {
         ul {
