--- a/client/src/Pages/Portfolio/portfolio.scss
+++ b/client/src/Pages/Portfolio/portfolio.scss
@@ -23,10 +23,11 @@
     justify-content: center;
     position: relative;
 
-    h1 {
+    h2 {
         height: fit-content;
         width: 100%;
         text-align: center;
+        font-size: 40px !important;
     }
 }
 
