Changing margin on hero

--- a/client/src/Pages/Home-Page/hero/first-banner.scss
+++ b/client/src/Pages/Home-Page/hero/first-banner.scss
@@ -57,8 +57,7 @@
 .catch {
   width: 80%;
   max-width: 1200px;
-  margin: 0 auto;
-  margin-top: 11rem;
+  margin: 6.25rem auto 0 auto;
 
   h1 {
     font-size: calc(1.5vw + 33px);
