Auto scroll to trending table on trending page after back tracking

--- a/client/src/Pages/Home-Page/crypto-prices/market-banner.scss
+++ b/client/src/Pages/Home-Page/crypto-prices/market-banner.scss
@@ -205,8 +205,9 @@
     }
 
     .api-table {
+        width: auto;
         margin: 0 auto;
-        overflow-x: scroll !important;
+        overflow-x: auto !important;
     }
 
     .row {
