Storing state in URL to remember page

--- a/client/src/Pages/Home-Page/crypto-prices/market-banner.scss
+++ b/client/src/Pages/Home-Page/crypto-prices/market-banner.scss
@@ -170,11 +170,6 @@
     }
 }
 
-
-#first {
-    margin-left: 2rem;
-}
-
 .green {
     color: #00a666;
 
@@ -191,6 +186,15 @@
     text-decoration: none;
     color: $white;
     width: 100%;
+}
+
+#first {
+    margin-left: 2rem;
+}
+
+#scroller {
+    position: absolute;
+    top: -205px;
 }
 
 
