--- a/client/src/Pages/Login/login.scss
+++ b/client/src/Pages/Login/login.scss
@@ -161,12 +161,12 @@
 }
 
 .load-login {
-    width: 40px;
+    width: 35px;
     position: absolute;
     z-index: 999;
     margin: 0 !important;
-    bottom: 0;
-    left: 50%;
+    top: -18px;
+    left: 63%;
     transform: translate(-50%, 65px);
 }
 
