--- a/client/src/Pages/Coin-Data/individual-coin.scss
+++ b/client/src/Pages/Coin-Data/individual-coin.scss
@@ -12,7 +12,7 @@
 
 .coin-description {
     color: $dimmed-white2;
-    width: 75%;
+    width: 75%; 
     max-width: 1500px;
     margin: 0 auto 0 auto;
 }
@@ -404,5 +404,9 @@
 @media (max-width: 550px){
     .live-rate{
         display: none;
+    }
+
+    .data-points {
+        gap: 0rem;
     }
 }
