--- a/client/src/Pages/Home-Page/crypto-prices/market-banner.scss
+++ b/client/src/Pages/Home-Page/crypto-prices/market-banner.scss
@@ -13,7 +13,6 @@
     width: 75%;
     margin: 0 auto;
     padding-top: 2rem;
-    max-width: 1200px;
 
     div {
         margin-top: 3rem;
@@ -52,7 +51,7 @@
     color: $white;
     background-color: $bg-deep;
     padding: 3rem;
-    flex-direction: column;
+
     h2 {
         margin-bottom: 3rem;
         font-weight: 600;
@@ -83,10 +82,8 @@
 
 .api-table {
     width: 100%;
-    max-width: 1200px;
     position: relative;
-    overflow-y: hidden;
-    margin: 0 auto
+    overflow-y: hidden
 }
 
 .row {
@@ -200,11 +197,6 @@
     top: -205px;
 }
 
-#todays-prices {
-    max-width: 1200px;
-    margin: 1rem auto;
-}
-
 
 @media(max-width: 960px) {
 
@@ -217,6 +209,7 @@
     }
 
     .api-table {
+        width: auto;
         margin: 0 auto;
         overflow-x: auto !important;
     }
@@ -228,13 +221,13 @@
     .heading {
         width: 850px;
     }
+
 }
 
 @media(max-width: 750px) {
     .top-coins {
         flex-wrap: wrap;
         width: 100%;
-
         div {
             flex-basis: 50%;
         }
