--- a/client/src/Pages/Coin-Data/individual-coin.scss
+++ b/client/src/Pages/Coin-Data/individual-coin.scss
@@ -176,7 +176,8 @@
 }
 
 .entire-bar{
-    width: 500px;
+    max-width: 500px;
+    width: 100%;
     height: 10px;
     background: linear-gradient(90deg, rgba(255,0,0,1) 0%, rgba(255,119,0,1) 20%, rgba(255,221,0,1) 30%, rgba(189,255,0,1) 55%, rgba(0,255,55,1) 70%, rgba(0,175,38,1) 90%, rgba(0,45,10,1) 100%);
     border-radius: 10px;
@@ -202,7 +203,7 @@
     padding-top: 1.5rem;
     font-size: 1rem;
     color: $white;
-    width: 500px;
+    width: 100%;
 }
 
 .confirmation {
@@ -390,7 +391,6 @@
     }
 
     .intro-coin {
-
         img {
             width: 200px;
         }
@@ -402,10 +402,6 @@
 }
 
 @media (max-width: 550px){
-    .live-rate{
-        display: none;
-    }
-
     .data-points {
         gap: 0rem;
     }
