--- a/client/src/Pages/Coin-Data/individual-coin.scss
+++ b/client/src/Pages/Coin-Data/individual-coin.scss
@@ -4,7 +4,7 @@
     height: 100%;
     min-height: 100vh;
     background: linear-gradient(180deg, rgba(0,63,95,1) 0%, rgba(13,18,23,1) 35%);
-
+    overflow-x: hidden;
     h1{
         color: $white;
     }
